--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-native": "0.76.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/plugin-syntax-jsx": "^7.25.9",
     "@types/react": "~18.3.12",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "^5.3.3"
