--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "expo": "~52.0.40",
     "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.76.7"
   },
   "devDependencies": {
