--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "expo-status-bar": "~2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "styled-components": "^6.1.16"
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.25.9",
