--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "expo": "~52.0.40",
+    "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
