--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "expo": "~52.0.40",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
+    "phosphor-react-native": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.76.7",
+    "react-native-svg": "^15.11.2",
     "styled-components": "^6.1.16"
   },
   "devDependencies": {
