--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
+    "@expo/vector-icons": "^14.0.4",
     "expo": "~52.0.40",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
