--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/vector-icons": "^14.0.4",
+    "@react-navigation/native": "^7.0.19",
+    "@react-navigation/native-stack": "^7.3.3",
     "expo": "~52.0.40",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
@@ -18,6 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.76.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
     "styled-components": "^6.1.16"
   },
