--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
-    "styled-components": "^6.1.16"
+    "styled-components": "^6.1.16",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/plugin-syntax-jsx": "^7.25.9",
