✨ feat(multi): armazenando novos grupos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
       ],
       "@screens/*": [
         "./src/screens/*"
+      ],
+      "@storage/*": [
+        "./src/storage/*"
       ]
     }
   }
