✨ feat(multi): implementa pasta utils e regra de exception

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
       ],
       "@storage/*": [
         "./src/storage/*"
+      ],
+      "@utils/*": [
+        "./src/utils/*"
       ]
     }
   }
